fixed spacing lol

--- a/css/index.css
+++ b/css/index.css
@@ -12,6 +12,7 @@ h1 {
   font-size: 75px;
   color: #2d359d;
   margin-bottom: 5px;
+  margin-top: 0px;
 }
 
 h3 {
